syntax = "proto3";

option java_package = "net.william278.huskhomes.proto";
option java_outer_classname = "Queue";

package net.william278.huskhomes.proto;

import "definition.proto";

message Leave {
  message Request {
    User user = 1;
  }

  message Response {
    Result result = 1;
  }

  enum Result {
    SUCCEED = 0;
    USER_NOT_FOUND = 1;
  }
}

message Join {
  message Request {
    User user = 1;
    NetworkPosition position = 2;
    int32 priority = 3;
    string type = 4;
  }

  message Response {
    Result result = 1;
  }

  enum Result {
    SUCCEED = 0;
    REPLACED = 1;
  }
}

message UpdateSettings {
  message Request {
    uint32 queueStarts = 1;
    optional string message = 2;
    optional string actionbar = 3;
    optional string oldQueueMessage = 4;
    optional string finishQueueMessage = 5;
  }
}
